Prevent ScrollReveal flickering

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+/* ScrollReveal */
+html.sr .load-hidden {
+    visibility: hidden;
+}
+
 /* Title fonts */
 h1 {
     font-family: 'Montserrat', sans-serif;
